MyDemoOrg/force-app/main/default/objects/signature__Google_Template_Process__c/signature__Google_Template_Process__c.object-meta.xml
<CustomObject>
    <description>Junction between Processes and Templates</description>
    <label>ß Template Process</label>
    <nameField>
        <displayFormat>TP-{000000}</displayFormat>
        <label>Template Process #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ß Template Processes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>