MyDemoOrg/force-app/main/default/objects/signature__Google_Template_Process__c/fields/signature__Async_Apex_Job__c.field-meta.xml
<CustomField>
    <fullName>signature__Async_Apex_Job__c</fullName>
    <inlineHelpText>The Apex Job Id that is processing this Process,if Job failed then query this job to see the status.</inlineHelpText>
    <label>Async Apex Job</label>
    <length>18</length>
    <type>Text</type>
</CustomField>