MyDemoOrg/force-app/main/default/objects/signature__Google_Template_Process__c/fields/signature__Process__c.field-meta.xml
<CustomField>
    <fullName>signature__Process__c</fullName>
    <label>Google Process</label>
    <referenceTo>signature__Google_Process__c</referenceTo>
    <relationshipName>Google_Template_Processes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>