MyDemoOrg/force-app/main/default/objects/signature__Google_Template_Process__c/fields/signature__ProcessDoc__c.field-meta.xml
<CustomField>
    <fullName>signature__ProcessDoc__c</fullName>
    <label>ProcessDoc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>