MyDemoOrg/force-app/main/default/objects/signature__Google_Template_Process__c/fields/signature__Record__c.field-meta.xml
<CustomField>
    <fullName>signature__Record__c</fullName>
    <formula>signature__Process__r.signature__Signature__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record</label>
    <type>Text</type>
</CustomField>