MyDemoOrg/force-app/main/default/objects/signature__Google_Template_Process__c/fields/signature__Stage__c.field-meta.xml
<CustomField>
    <fullName>signature__Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clone</fullName>
                <label>Clone Template</label>
            </value>
            <value>
                <fullName>Direct</fullName>
                <label>Process Direct Replacement</label>
            </value>
            <value>
                <fullName>Indirect</fullName>
                <label>Process Indirect Replacement</label>
            </value>
            <value>
                <fullName>Export</fullName>
                <label>Export Process File</label>
            </value>
            <value>
                <fullName>Delete</fullName>
                <label>Delete Google File</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>