MyDemoOrg/force-app/main/default/objects/signature__Google_Template_Process__c/fields/signature__Template__c.field-meta.xml
<CustomField>
    <fullName>signature__Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Template</label>
    <referenceTo>signature__Google_Template__c</referenceTo>
    <relationshipName>Google_Template_Processes</relationshipName>
    <type>Lookup</type>
</CustomField>